# studx

./: .gitignore  Caddyfile  Caddyfile.ext.celtiis  Caddyfile.prod  Caddyfile.template  Makefile  README.md  docker-compose.yml  env.template  kitty.conf  supervisord.prod.ini
api/: .gitignore  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
api/apps/auth/: __init__.py  admin.py  apps.py  forms.py  models.py  openapi.py  serializers.py  urls.py  views.py
api/apps/auth/migrations/: 0001_initial.py
api/apps/studx/: apps.py  models.py  serializers.py  urls.py
api/apps/studx/migrations/: 0001_initial.py  0002_alter_organization_name_alter_organization_slug.py  0003_alter_organizationmembership_unique_together.py  0004_event_delete_assignment_remove_course_created_by_and_more.py  0005_event_org.py
api/apps/studx/views/: events.py  notifications.py  organization.py
api/core/: celery.py  settings.py  urls.py
api/fixtures/: base.json
api/helpers/: __init__.py
api/tasks/: __init__.py  add_members.py  email.py
api/templates/: blank.html
api/templates/emails/: verification.html
automated_demo/: calendar.view.spec.ts  constants.ts  onboarding.spec.ts  package.json  partials.ts  playwright.config.ts  pnpm-lock.yaml  utils.ts
rooms/: .gitignore  Cargo.toml  Dockerfile  rust-toolchain.toml
rooms/src/: main.rs
rooms/src/webrtc/: registry.rs  room.rs
rooms/src/websocket/: mod.rs  server.rs  session.rs
rooms/src/websocket/messages/: internals.rs  mod.rs
scripts/: .gitignore  devices.py  install.sh  play.ps1  play.py  play.sh  proxy.sh  virtmic.sh
scripts/files/: studx-attendees.csv  studx-users.csv
ui/: .gitignore  Caddyfile  Dockerfile  README.md  declare.d.ts  dev.sh  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  windi.config.ts
ui/src/: App.vue  main.ts
ui/src/components/: NotificationItem.vue
ui/src/router/: guards.ts  index.ts
ui/src/schemas/: auth.ts  events.ts  index.ts  notifications.ts  organization.ts
ui/src/services/: auth.ts  events.ts  index.ts  notifications.ts  organization.ts
ui/src/stores/: notifications.ts  organization.ts  room.ts  user.ts
whiteboard/: Dockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
whiteboard/config/: webpack.base.js
whiteboard/scripts/: server-frontend-dev.js  server.js
whiteboard/src/: index.html
writepad/: .gitignore  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.mjs  serve.sh  server.mjs
(+44 files in other folders)
