[package]
name = "studx"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "studx"

[[bin]]
name = "studx"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
async-lock = "2.6.0"
dotenv = "0.15.0"
mediasoup = "0.11.2"
serde_json = "1.0.89"
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.redis]
version = "0.22.1"
features = [
  "r2d2",
  "cluster",
  "connection-manager",
  "tokio-comp",
  "tokio-native-tls-comp",
]
