[package]
name = "studx"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "studx"

[[bin]]
name = "studx"
path = "src/main.rs"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
async-lock = "2.7.0"
dotenv = "0.15.0"
# rev = dc4f8f3
# mediasoup = { git = "https://github.com/versatica/mediasoup", branch = "v3" }
mediasoup = "0.17.0"
serde_json = "1.0.103"
parking_lot = "0.12.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "serde"]

[dependencies.serde]
version = "1.0.175"
features = ["derive"]

[dependencies.redis]
version = "0.23.0"
features = [
  "r2d2",
  "cluster",
  "connection-manager",
  "tokio-comp",
  "tokio-native-tls-comp",
]
